[FIX] Fix safe area on ios

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -5,6 +5,9 @@
 
 .dashboard-title {
   margin: 20pt;
+  margin-top: 20pt; /* Status bar height on iOS 10 */
+  margin-top: calc(constant(safe-area-inset-top) + 20pt); /* Status bar height on iOS 11.0 */
+  margin-top: calc(env(safe-area-inset-top) + 20pt); /* Status bar height on iOS 11+ */
 }
 
 ion-card-title {
